
Bug Fixes:

- Advanced Scoreboard: Fixed offset for vassals when grouped
- Advanced Scoreboard: Changed empty vassal indent to a bullet
- Autolog: Added checking of logging to all logging options which was previously ignored
- Autolog: Fixed bug with Autolog onCityOffered logging which was misinterpreting a passed event argument
- IconGrid: Added changes by DanF5771 (two widget data values instead of one)
- IconGrid: Fixed bug where empty icon and stacked bar columns caused following columns to misalign
- MA: Removed event reporting
- MA: Reversed leaderhead parameters so attitude of row leaderhead is shown
- MA: Fixed scrolling display error with Worst Enemy in MA Sit Rep when there is none for a leader
- Main Interface: Fixed click/hover response on (widescreen) research bar
- CDA: Now adjusts position of Liberate button to make sure it doesn't overlap Exit text
- Advanced Scoreboard: Fixed screen redraw after peace treaty is canceled
- No more warning about xmllib being deprecated


FOR MODDERS

New Features:

- New Font File includes citizen icon, great general icon, and blank icon
- Created FontUtil for adding new constants to FontSymbols
    Define symbols in XML: <symbol id [name] [from] [offset]/>
    Provides getChar(symbol) for easier access to unicode string for symbol
- CvMainInterface.updateScreen() fires gameUpdate event (not fired by Civ4)
- Added <shortcut> tag to XML configuration to create keyboard shortcuts
- Added module attribute to <mod> element that is used as default for module attributes in all child elements

Bug Fixes:

- Reloading Python modules now works!
    Added PythonReloaded event fired after reloading (good time to call onLoad handler for mods that store data)
- Fixed bug where Trade.findTypes() from TradeUtil.py was returning a list of types rather than a list of trades with that type
- Fixed DealCanceled event
- Option dirty bits and change functions are no longer set/called during initialization